--- a/src/Certificate.css
+++ b/src/Certificate.css
@@ -23,12 +23,14 @@ section {
 
 #certificate-list {
     margin-top: 20px;
+    text-align: center;
+    text-shadow: #333;
 }
 
 .certificate-item {
-    margin: 10px 0;
+    margin: 20px 0;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 5px solid #ddd;
     border-radius: 5px;
     background: #f8f9fa;
 }
@@ -50,4 +52,9 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
+}
+img {
+    width: 600px;
+    display: flex;
+    margin-left: 80px;
 }
